examples/grafana/dc.yml
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: "${DC_NAME}"

spec:
  replicas: 1
  selector:
    name: "${DC_NAME}"

  template:
    metadata:
      labels:
        name: "${DC_NAME}"

    spec:
      containers:
        - name: "${DC_NAME}"
          image: "grafana/grafana:latest"
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
            limits:
              memory: "1Gi"
          volumeMounts:
            - name: grafana-data-volume
              mountPath: /var/lib/grafana

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 1

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 1

      volumes:
        - name: grafana-data-volume
          persistentVolumeClaim:
            claimName: "pvc-grafana-data"

---
kind: Service
apiVersion: v1
metadata:
  name: grafana
spec:
  selector:
    name: "${DC_NAME}"
  ports:
    - name: web
      protocol: TCP
      port: 3000
  type: ClusterIP
