examples/grafana/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
spec:
  host: "${DOMAIN}"
  port:
    targetPort: web
  tls:
    termination: edge
  to:
    kind: Service
    name: grafana
  wildcardPolicy: None
